--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_BASE_URL = https://tmsbackend-ir2n.onrender.com
+VITE_APP_BASE_URL = http://localhost:8800
 VITE_APP_FIREBASE_API_KEY= AIzaSyAZPZF9cV9cD38HYuoK-gw6Ct5GRPaehZA
